--- a/order-common/pom.xml
+++ b/order-common/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>seata-order</artifactId>
+    <artifactId>order-common</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
