--- a/svc-stock/pom.xml
+++ b/svc-stock/pom.xml
@@ -13,11 +13,6 @@
     <dependencies>
         <dependency>
             <groupId>xingyu.lab</groupId>
-            <artifactId>svc-facade</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>xingyu.lab</groupId>
             <artifactId>order-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -29,6 +24,7 @@
                 <!-- The plugin rewrites your manifest -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.1.13.RELEASE</version>
                 <configuration><!-- 指定该Main Class为全局的唯一入口 -->
                     <mainClass>xingyu.lu.individual.svc.sofa.boot.StockApplication
                     </mainClass>
