--- a/svc-pay/src/main/resources/application.yaml
+++ b/svc-pay/src/main/resources/application.yaml
@@ -22,6 +22,4 @@ com:
       rpc:
         registry:
           address: nacos://172.16.31.210:31256/dev
-        triple:
-          port: 50051
-# GRPC_DEFAULT_PORT = 50051
+        bolt-port: 12201
