--- a/svc-pay/pom.xml
+++ b/svc-pay/pom.xml
@@ -26,8 +26,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.1.13.RELEASE</version>
                 <configuration><!-- 指定该Main Class为全局的唯一入口 -->
-                    <mainClass>xingyu.lu.individual.svc.sofa.boot.PayApplication
-                    </mainClass>
+                    <mainClass>xingyu.lu.individual.svc.sofa.boot.PayApplication</mainClass>
                     <layout>ZIP</layout>
                 </configuration>
                 <executions>
