--- a/order-common/pom.xml
+++ b/order-common/pom.xml
@@ -11,6 +11,8 @@
 
     <artifactId>order-common</artifactId>
 
+    <packaging>jar</packaging>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
