--- a/svc-pay/pom.xml
+++ b/svc-pay/pom.xml
@@ -18,7 +18,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>Sofa-Provider</finalName>
+        <finalName>Sofa-PayApplication</finalName>
         <plugins>
             <plugin>
                 <!-- The plugin rewrites your manifest -->
