--- a/svc-pay/src/main/resources/application.yaml
+++ b/svc-pay/src/main/resources/application.yaml
@@ -23,4 +23,5 @@ com:
         registry:
           address: nacos://172.16.31.210:31256/dev
         rest-port: 8091
-        bolt-port: 9091
+        bolt-port: 12201
+        dubbo-port: 20881
