--- a/svc-stock/src/main/resources/application.yaml
+++ b/svc-stock/src/main/resources/application.yaml
@@ -24,4 +24,4 @@ com:
           address: nacos://172.16.31.210:31256/dev
         rest-port: 8092
         bolt-port: 12202
-        dubbo-port: 20882
+        h2c-port: 12302
